<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team17Project</string>
    <string name="upvote">Upvote</string>
    <string name="favorite">Favorite</string>
    <string name="reply">Reply</string>
    <string name="title_activity_question_list">View Questions</string>
    <string name="title_activity_question_view">View Question</string>
    <string name="title_activity_taxonomy_view">Taxonomies</string>
    <string name="action_new_question">New Question</string>
    <string name="action_read_later">Read Later</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_date_asc">Sort by Date (Asc)</string>
    <string name="action_sort_date_desc">Sort by Date (Desc)</string>
    <string name="action_search">Search</string>
    <string name="upvotes">Upvotes</string>
    <string name="comment">Comments</string>
    <string name="default_str">default string</string>
    <string name="default_num">0</string>
    <string name="default_user">username</string>
    <string name="createAnswer">Add Answer!</string>
    <string name="title_activity_login">moQA</string>
    <string name="createComment">Add Comment</string>
	<string-array name="taxonomies">
        <item>All Questions</item>
        <item>My Activity</item>
        <item>Favorites</item>
        <item>Most Upvoted Questions</item>
        <item>Most Upvoted Answers</item>
        <item>Recently Viewed</item>
        <item>Read Later</item>
    </string-array>
    <string-array name="sortOptions">
        <item>Newest First</item>
        <item>Oldest First</item>
        <item>Attachments First</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="answer_popup_title">Add an Answer</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="comment_popup_title">Add a comment</string>
    <string name="answer_count">%d Answers</string>
    <string name="answer_count_one">1 Answer</string>
    <string name="sortmenu">SortMenu</string>

</resources>