<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ualberta.team17.QuestionListActivity" >

    <item
        android:id="@+id/action_new_question"
        android:orderInCategory="100"
        android:title="@string/action_new_question"/>
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"/>
    <item
        android:id="@+id/action_sort_date"
        android:orderInCategory="100"
        android:title="@string/action_sort_date_desc"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"/>

</menu>
