<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/questionlist_group" >        
        
        <item 
	        android:id="@+id/action_search"
	        android:title="@string/action_search"
	        android:showAsAction="always"/>           

        <item 
	        android:id="@+id/action_new_question"
	        android:title="@string/action_new_question"
	        android:icon="@android:drawable/ic_menu_add"
	        android:showAsAction="always"/>
        
    </group>
    <group android:id="@+id/questionview_group">
	    
        <item 
	        android:id="@+id/action_new_question2"
	        android:title="@string/action_new_question"
	        android:icon="@android:drawable/ic_menu_add"
	        android:showAsAction="always"/>
        
        <item
            android:id="@+id/action_read_later"
            android:title="@string/action_read_later"
            android:icon="@drawable/ic_action_time"
            android:showAsAction="always"/>
        
        <item 
	        android:id="@+id/action_new_answer"
	        android:title="@string/createAnswer"
	        android:showAsAction="always"/>
        
    </group>
    
    <group android:id="@+id/questioncreation_group">
	    
        <item 
	        android:id="@+id/action_new_question3"
	        android:title="@string/action_new_question"
	        android:icon="@android:drawable/ic_menu_add"
	        android:showAsAction="always"/>
        
        <item 
	        android:id="@+id/action_submit_question"
	        android:title="@string/submit"
	        android:showAsAction="always"/>
    </group>
</menu>
