<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"         
         android:ems="10"
         android:text="@string/comment_popup_title"
         style="@style/titleText1"
         android:textSize="@dimen/extra_large_text" >
    </TextView>
    
	<EditText
         android:id="@+id/commentText"
         android:gravity="top"
         android:layout_width="match_parent"
         android:layout_height="150dp"         
         android:ems="10"
         android:text=""
         style="@style/bodyText3" >
    </EditText>
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >  
	
		<Button
	        android:id="@+id/cancelComment"        
	        style="@style/popupButton"	               
	        android:layout_height="wrap_content"		        
	        android:text="@string/cancel"
	        />
		
		<Button
	        android:id="@+id/submitComment"	        
	        style="@style/popupButton"     	       
	        android:layout_height="wrap_content"	        
	        android:text="@string/submit"
	        />
		
	</LinearLayout>
	
    
</LinearLayout>
